unpackaged/main/default/objects/Employee_Record__c/fields/Primary_Org__c.field-meta.xml
<CustomField>
    <fullName>Primary_Org__c</fullName>
    <inlineHelpText>Which org is the employee record managed in?</inlineHelpText>
    <label>Primary Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Majenta</fullName>
            </value>
            <value>
                <fullName>Enerjyhub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>