unpackaged/main/default/objects/Employee_Record__c/fields/Qualified__c.field-meta.xml
<CustomField>
    <fullName>Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the employee have the relevant qualifications and experience for their role?</inlineHelpText>
    <label>Qualified?</label>
    <type>Checkbox</type>
</CustomField>