unpackaged/main/default/objects/Employee_Record__c/fields/Salesforce_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Account_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Account Created</label>
    <type>Checkbox</type>
</CustomField>