unpackaged/main/default/objects/Employee_Record__c/fields/SecurityClearanceExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>SecurityClearanceExpiryDate__c</fullName>
    <label>Security Clearance Expiry Date</label>
    <type>Date</type>
</CustomField>