unpackaged/main/default/objects/Employee_Record__c/fields/SecurityClearanceGrantedDate__c.field-meta.xml
<CustomField>
    <fullName>SecurityClearanceGrantedDate__c</fullName>
    <label>Security Clearance Granted Date</label>
    <type>Date</type>
</CustomField>