unpackaged/main/default/objects/Employee_Record__c/fields/SecurityClearanceHeldPick__c.field-meta.xml
<CustomField>
    <fullName>SecurityClearanceHeldPick__c</fullName>
    <label>Security Clearance Held</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SecurityClearanceRequiredPick__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Secret</fullName>
            </value>
            <value>
                <fullName>Top Secret</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>