unpackaged/main/default/objects/Employee_Record__c/fields/SecurityClearanceRequiredPick__c.field-meta.xml
<CustomField>
    <fullName>SecurityClearanceRequiredPick__c</fullName>
    <label>Security Clearance Required for Role?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>