unpackaged/main/default/objects/Employee_Record__c/fields/Sick_Leave_Taken__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leave_Taken__c</fullName>
    <inlineHelpText>Number of days of sick leave taken this year</inlineHelpText>
    <label>Sick Leave Taken</label>
    <summarizedField>Absence__c.Number_of_Days__c</summarizedField>
    <summaryFilterItems>
        <field>Absence__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Sick Leave</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Absence__c.IsThis_Year__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Absence__c.Employee_Record__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>