unpackaged/main/default/objects/Employee_Record__c/fields/Signed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Contract In Place</label>
    <type>Checkbox</type>
</CustomField>