unpackaged/main/default/objects/Employee_Record__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Start Date at Majenta</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>