unpackaged/main/default/objects/Employee_Record__c/fields/Start_Date_Continuos_Employment__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Continuos_Employment__c</fullName>
    <label>Start Date - Continuos Employment</label>
    <type>Date</type>
</CustomField>