unpackaged/main/default/objects/Employee_Record__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link this record to the salesforce user</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Records</relationshipName>
    <type>Lookup</type>
</CustomField>