unpackaged/main/default/objects/Employee_Record__c/fields/User_is_Owner__c.field-meta.xml
<CustomField>
    <fullName>User_is_Owner__c</fullName>
    <formula>IF( $User.Id = Owner:User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This automated field identifies if the logged-in user viewing the record is equal to the owner of the record. Access to fields and related records are determined by this field.</inlineHelpText>
    <label>User is Viewing Own Record</label>
    <type>Checkbox</type>
</CustomField>