unpackaged/main/default/objects/Employee_Record__c/fields/Variable_Commission__c.field-meta.xml
<CustomField>
    <fullName>Variable_Commission__c</fullName>
    <label>Variable £- Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>