unpackaged/main/default/objects/Employee_Record__c/fields/Variable_Pay__c.field-meta.xml
<CustomField>
    <fullName>Variable_Pay__c</fullName>
    <label>Variable Pay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>