unpackaged/main/default/objects/Employee_Record__c/fields/Years_at_Majenta__c.field-meta.xml
<CustomField>
    <fullName>Years_at_Majenta__c</fullName>
    <formula>IF(ISBLANK( Leaving_Date__c ) ,

(FLOOR((TODAY() -  Start_Date__c)/365.2425)), 

((Leaving_Date__c  -  Start_Date__c )/ 365))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years at Majenta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>