unpackaged/main/default/objects/Employee_Record__c/validationRules/Business_Cover_ticked_when_Driver_is_not.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Cover_ticked_when_Driver_is_not</fullName>
    <active>true</active>
    <description>Triggers when the Business Driver is not ticked but the business cover is ticked</description>
    <errorConditionFormula>IsBusiness_Driver__c = FALSE &amp;&amp;  IsBusiness_Cover__c = TRUE</errorConditionFormula>
    <errorDisplayField>IsBusiness_Cover__c</errorDisplayField>
    <errorMessage>To tick "Business Cover" you must be a "Business Driver". If you are, also tick "Business Driver"</errorMessage>
</ValidationRule>