unpackaged/main/default/objects/Employee_Record__c/validationRules/Consultant_Company_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Consultant_Company_Name</fullName>
    <active>true</active>
    <description>Consultant Company Name must be filled in if Employee Type is a consultant</description>
    <errorConditionFormula>AND( 

 ISPICKVAL(Employee_Type__c, 'Consultant') ,
 ISBLANK(Consultant_Company_Name__c ))</errorConditionFormula>
    <errorDisplayField>Consultant_Company_Name__c</errorDisplayField>
    <errorMessage>Consultant Company Name must be populated if Employee Type equals consultant</errorMessage>
</ValidationRule>