unpackaged/main/default/objects/Employee_Record__c/validationRules/Edit_Permissions.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_Permissions</fullName>
    <active>true</active>
    <errorConditionFormula>OR (
ISCHANGED( Contractual_Annual_Salary__c ), 
ISCHANGED( Holiday_Entitlement__c ) ,
ISCHANGED( Days_Carried_Over__c ))

&amp;&amp;

  NOT( $Permission.Full_access_employee_records )</errorConditionFormula>
    <errorMessage>You do not have permissions to edit this field</errorMessage>
</ValidationRule>