unpackaged/main/default/objects/Employee_Record__c/validationRules/Emergency_Contact_Number_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Emergency_Contact_Number_Populated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(  Emergency_Contact_1__c  )),
ISBLANK(  Emergency_Contact_Number_1__c  )
)</errorConditionFormula>
    <errorDisplayField>Emergency_Contact_Number_1__c</errorDisplayField>
    <errorMessage>If Emergency Contact (1) is populated, a contact number must be provided.</errorMessage>
</ValidationRule>