unpackaged/main/default/objects/Employee_Record__c/validationRules/Emergency_Contact_Number_Populated_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Emergency_Contact_Number_Populated_2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Emergency_Contact_2__c )),
ISBLANK( Emergency_Contact_Number_2__c )
)</errorConditionFormula>
    <errorDisplayField>Emergency_Contact_Number_2__c</errorDisplayField>
    <errorMessage>If Emergency Contact (2) is populated, a contact number must be provided.</errorMessage>
</ValidationRule>