unpackaged/main/default/objects/Employee_Record__c/validationRules/Insurance_Renewal_Date_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance_Renewal_Date_Populated</fullName>
    <active>true</active>
    <errorConditionFormula>IsInsurance_Updated__c = TRUE
 &amp;&amp; 		
 ISBLANK(Insurance_Renewal_Date__c)</errorConditionFormula>
    <errorDisplayField>Insurance_Renewal_Date__c</errorDisplayField>
    <errorMessage>Insurance Renewal Data must be populated if you have uploaded your insurance document</errorMessage>
</ValidationRule>