unpackaged/main/default/objects/Employee_Record__c/validationRules/National_Insurance_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>National_Insurance_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND

 (NOT(ISBLANK( NI_Number__c)),

LEN ( NI_Number__c) &lt;&gt;9)</errorConditionFormula>
    <errorDisplayField>NI_Number__c</errorDisplayField>
    <errorMessage>National Insurance Number must be 9 digits</errorMessage>
</ValidationRule>