unpackaged/main/default/objects/Employee_Record__c/validationRules/Passport_Expiry_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Expiry_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Passport_Number__c )), 
ISBLANK( Passport_Expiry_Date__c ) 
)</errorConditionFormula>
    <errorDisplayField>Passport_Expiry_Date__c</errorDisplayField>
    <errorMessage>If Passport Number is populated, Passport Expiry Date must be populated.</errorMessage>
</ValidationRule>