unpackaged/main/default/objects/Employee_Record__c/validationRules/Passport_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Passport_Expiry_Date__c )),
ISBLANK( Passport_Number__c )
)</errorConditionFormula>
    <errorDisplayField>Passport_Number__c</errorDisplayField>
    <errorMessage>If Passport Expiry Date is populated, Passport Number must be populated</errorMessage>
</ValidationRule>