unpackaged/main/default/objects/Employee_Record__c/validationRules/Passport_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Number_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND

(NOT(ISBLANK(Passport_Number__c )),

LEN( Passport_Number__c)&lt;&gt;9)</errorConditionFormula>
    <errorDisplayField>Passport_Number__c</errorDisplayField>
    <errorMessage>Passport Number must be 9 digits</errorMessage>
</ValidationRule>