unpackaged/main/default/objects/Employee_Record__c/validationRules/Reviewed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Reviewed_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Date_Reviewed__c ) 
&amp;&amp; 
  
 NOT($User.Id =  User__r.ManagerId)</errorConditionFormula>
    <errorDisplayField>Date_Reviewed__c</errorDisplayField>
    <errorMessage>An employee can only be reviewed by their manager</errorMessage>
</ValidationRule>