unpackaged/main/default/objects/Employee_Record__c/validationRules/Salesforce_Admin.validationRule-meta.xml
<ValidationRule>
    <fullName>Salesforce_Admin</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED( Contractual_Annual_Salary__c ), 

$User.ProfileId = "00e4K000001dwXd" )</errorConditionFormula>
    <errorDisplayField>Contractual_Annual_Salary__c</errorDisplayField>
    <errorMessage>You do not have permissions to edit this field</errorMessage>
</ValidationRule>