unpackaged/main/default/objects/Employee_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Primary_Org__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Department__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>