unpackaged/main/default/objects/Employee_Record__c/listViews/All_active_employees.listView-meta.xml
<ListView>
    <fullName>All_active_employees</fullName>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Department__c</columns>
    <columns>Primary_Org__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Holiday_Entitlement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>Test</value>
    </filters>
    <label>All (active employees)</label>
    <sharedTo>
        <group>HR_Access</group>
    </sharedTo>
</ListView>