unpackaged/main/default/objects/Employee_Record__c/listViews/All_past_employees.listView-meta.xml
<ListView>
    <fullName>All_past_employees</fullName>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Department__c</columns>
    <columns>Primary_Org__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Leaving_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All (past employees)</label>
    <sharedTo>
        <group>HR_Access</group>
    </sharedTo>
</ListView>