unpackaged/main/default/objects/Employee_Record__c/listViews/My_Employee_Record.listView-meta.xml
<ListView>
    <fullName>My_Employee_Record</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Employee Record</label>
    <sharedTo>
        <group>Directors</group>
    </sharedTo>
</ListView>